[workspace]
members = [
    "support",
    "basic",
    "two_bone",
    "foot_placement",
    "look_at",
    "support_hand",
    "multi_chain",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-animation-ik = { path = ".." }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
